--- a/index.html
+++ b/index.html
@@ -1,21 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Cloud Website</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+<h1>🚀 Version 2 – Auto Deployment Works!</h1>
 
-    <div class="container">
-        <h1>🚀 Successfully Deployed to the Cloud!</h1>
-        <p>This is my static website hosted on Netlify/Vercel.</p>
 
-        <button onclick="showMessage()">Click Me</button>
-        <p id="message"></p>
-    </div>
-
-    <script src="script.js"></script>
-</body>
-</html>
